@@ -59,6 +59,11 @@ if (!class_exists('IG_Request')) {
                 $base_path = $this->base_path;
             }
             $view_path = $base_path . '/views/' . $view . '.php';
+
+            if (file_exists($view)) {
+                $view_path = $view;
+            }
+
             $view_path = apply_filters('ig_view_file', $view_path, $view);
 
             if (file_exists($view_path)) {
