@@ -42,6 +42,7 @@ Fix: Social & Skill js bug
 some more hooks & filters
 fix bug extend jobs expired date
 fix bug job search widget wrong parameter
+fix bug expert widget not assign profile to owner
 add wallets component (marketpress required)
 add charging when saving new expert profile
 add charging when saving new job
